--- a/resources/css/ckeditor5.css
+++ b/resources/css/ckeditor5.css
@@ -122,7 +122,7 @@
 }
 
 .questionContainer .input-group:has(p),
-.questionContainer .co-learning-completion {
+.questionContainer .completion-question-answer-container {
     display: block;
 }
 
