--- a/resources/css/co-learning.css
+++ b/resources/css/co-learning.css
@@ -662,6 +662,25 @@
     }
 }
 
+.completion-question-answer-container > p {
+    flex-grow: 1;
+    flex-shrink: 0;
+    width: 100%;
+}
+
+.completion-question-answer-container .completion-container {
+    max-width: 100%;
+}
+
+.completion-question-answer-container .completion-container > span {
+    max-width: 100%;
+}
+
+.completion-question-answer-container .completion-container > span > span {
+    max-width: 100%;
+    word-break: break-all;
+    width: 100%;
+}
 
 /* not really co-learning: */
 .indented-toggle-row {
